# ChangeLog for dev-db/libpq
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/ChangeLog,v 1.52 2006/04/17 17:44:53 flameeyes Exp $

  17 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> libpq-8.1.3-r1.ebuild:
  Add ~x86-fbsd keyword.

*libpq-8.1.3-r1 (10 Apr 2006)

  10 Apr 2006; <chrb@gentoo.org> +libpq-8.1.3-r1.ebuild:
  Re-add threads support (bug #120190). This requires the -opt package, this
  can be removed in 8.2.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> libpq-8.0.7.ebuild:
  Mark 8.0.7 stable on ia64

  20 Feb 2006; Joshua Kinard <kumba@gentoo.org> libpq-8.1.3.ebuild:
  Kick 8.1.3 back down to mips unstable -- no need to jump ahead of the other
  archs.

  20 Feb 2006; Joshua Kinard <kumba@gentoo.org> libpq-7.3.14.ebuild,
  libpq-7.4.12.ebuild, libpq-8.0.7.ebuild, libpq-8.1.3.ebuild:
  Marked stable on mips.

  19 Feb 2006; Bryan Østergaard <kloeri@gentoo.org libpq-7.3.11.ebuild,
  libpq-7.4.9.ebuild:
  Stable 7.3.11 + 7.4.9 on Alpha.

  16 Feb 2006; Masatomo Nakano <nakano@gentoo.org> Manifest:
  Fixed digest/manifest file.

*libpq-8.0.7 (15 Feb 2006)
*libpq-7.4.12 (15 Feb 2006)
*libpq-7.3.14 (15 Feb 2006)

  15 Feb 2006; Masatomo Nakano <nakano@gentoo.org>
  +files/libpq-7.3.14-gentoo.patch, +files/libpq-7.4.12-gentoo.patch,
  +files/libpq-8.0.7-gentoo.patch, +libpq-7.3.14.ebuild,
  +libpq-7.4.12.ebuild, +libpq-8.0.7.ebuild:
  Version bump.

*libpq-8.1.3 (14 Feb 2006)

  14 Feb 2006; Masatomo Nakano <nakano@gentoo.org>
  +files/libpq-8.1.3-gentoo.patch, +libpq-8.1.3.ebuild:
  Version bump.

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> libpq-8.0.4.ebuild:
  Mark 8.0.4 stable on alpha

  29 Jan 2006; Masatomo Nakano <nakano@gentoo.org>
  -files/libpq-7.3.10-gentoo.patch, -files/libpq-7.3.12-gentoo.patch,
  -files/libpq-7.4.10-gentoo.patch, -files/libpq-8.0.1-gentoo.patch,
  -files/libpq-8.0.5-gentoo.patch, -files/libpq-8.1.0-gentoo.patch,