@@ -1,0 +1,3 @@
+MD5 dd23ef0e9cbd1a9bca19f8ee66a021db postgresql-base-7.3.15.tar.bz2 5695061
+RMD160 55cc363e1ce26ea0c7f79c5adfd90714988afb46 postgresql-base-7.3.15.tar.bz2 5695061
+SHA256 81da1ab6c3d9e19aef068cc1db81ca696771dfa5c8ff262bcb1bf977ac7429dc postgresql-base-7.3.15.tar.bz2 5695061
