@@ -1,0 +1,3 @@
+MD5 2e4574f84f6312909de87126bd2859f8 postgresql-base-7.4.13.tar.bz2 6576973
+RMD160 5f90ed85fdceb06fe15e324620e931140e3617ef postgresql-base-7.4.13.tar.bz2 6576973
+SHA256 2e2fa6b1cf3fc7a66a58762acfb64ce42d358e0dd799a467316e937d3a116cf7 postgresql-base-7.4.13.tar.bz2 6576973
