@@ -1,1 +1,3 @@
 MD5 35ff2b9a3bc5c65f55b4192a334b0e88 postgresql-base-8.0.3.tar.bz2 7818251
+RMD160 0e91b565876f747f384f71e4ab4f55acbe07dc25 postgresql-base-8.0.3.tar.bz2 7818251
+SHA256 5d818472ffd4b502dbbd08755f2a9d37aa78f33afd3f4dd84ff7c889d055fd82 postgresql-base-8.0.3.tar.bz2 7818251
