@@ -1,1 +1,3 @@
 MD5 ece2604b7bc6c4c460d34113b1542725 postgresql-base-8.0.4.tar.bz2 7825300
+RMD160 75de92c8661174cfea03acc5e058d179ef6c3cf8 postgresql-base-8.0.4.tar.bz2 7825300
+SHA256 4295f381760cbec0141d097799563e854de2d4c04ed41aba3f33354ce8144134 postgresql-base-8.0.4.tar.bz2 7825300
