@@ -1,0 +1,3 @@
+MD5 4d84ff56ae9669b250060f9e2e36f788 postgresql-base-8.0.8.tar.bz2 7823046
+RMD160 2c60dc22f714bc0182051a94c3c1f513b30f574e postgresql-base-8.0.8.tar.bz2 7823046
+SHA256 906d86f2477309b9c2531d12fe720761fdffd73243a83ae31892bd7a0a618183 postgresql-base-8.0.8.tar.bz2 7823046
