@@ -1,1 +1,3 @@
 MD5 20fa7e49ea3a7f8f4948c6132bbebd9c postgresql-base-8.1.2.tar.bz2 8042367
+RMD160 b08044d5c80a255023ab8f8b31c84cc8e7936050 postgresql-base-8.1.2.tar.bz2 8042367
+SHA256 f21ae59a5aa4fe19379a669bafac3604e00d107e6c2ce71e05ff9f8780dfd8f1 postgresql-base-8.1.2.tar.bz2 8042367
