@@ -1,1 +1,3 @@
 MD5 4b9466e42b7951d7ec7be4455f64b13f postgresql-base-8.1.3.tar.bz2 8044411
+RMD160 539ec857517d01310225fff2e738ccd6698891ab postgresql-base-8.1.3.tar.bz2 8044411
+SHA256 39a776680997639a100ddbdc33128c210f610e7aadc114624d3d02fdd0350619 postgresql-base-8.1.3.tar.bz2 8044411
