@@ -1,0 +1,6 @@
+MD5 7ba24eaa31237eb8713782508de4dec7 postgresql-base-8.1.4.tar.bz2 8040435
+RMD160 b3389c51a9d3cc89935dd1cc6405a9dd9c07042d postgresql-base-8.1.4.tar.bz2 8040435
+SHA256 3d5e6cf4aa1593730c61676ffc4e3acbed73c0e13fb246035e54e4cf83fa60e1 postgresql-base-8.1.4.tar.bz2 8040435
+MD5 6aad690bd918086cc3fbf673b74e65e6 postgresql-opt-8.1.4.tar.bz2 144696
+RMD160 8f25c6137a8cbd786a647cf4d8ef59c95573012d postgresql-opt-8.1.4.tar.bz2 144696
+SHA256 5a6d27e303ad9b073f91e51658b13cfeb153e3d886af5e5c1093ea315e15738c postgresql-opt-8.1.4.tar.bz2 144696
