@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/libpq
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/ChangeLog,v 1.52 2006/04/17 17:44:53 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/ChangeLog,v 1.53 2006/05/31 17:40:39 voxus Exp $
+
+  31 May 2006; Konstantin Arkhipov <voxus@gentoo.org> +libpq-8.1.4.ebuild,
+  +libpq-8.0.8.ebuild, +libpq-7.4.13.ebuild, +libpq-7.3.15.ebuild:
+  Version bump wrt security bug #134168.
 
   17 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> libpq-8.1.3-r1.ebuild:
   Add ~x86-fbsd keyword.
